src/test/deca/context/invalid/objet/MethodReturnWrongType.deca
class A{
	int main(){
		return 2.4;
	}
}